c2dascript-transpile/tests/snapshots/snapshots__transpile@alloca.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/alloca.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(31) }, [CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(31) }, CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(31) }], false, false, true); declaration=alloca_sum; cause=unsupported builtin __builtin_alloca
--> ./tests/snapshots/alloca.c:10:19

--> ./tests/snapshots/alloca.c:5:1
