c2dascript-transpile/tests/snapshots/snapshots__transpile@arrays.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/arrays.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(44) }, [], false, false, true); declaration=entry; cause=zero-length C array has no daScript storage

--> ./tests/snapshots/arrays.c:7:1
