c2dascript-transpile/tests/snapshots/snapshots__transpile@asm.c.x86_64.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/arch-specific/asm.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(31) }, [], false, false, true); declaration=six; cause=unsupported inline asm: template="add $0, $1\n\t", inputs=2, outputs=1, clobbers=[], volatile=false
--> ./tests/snapshots/arch-specific/asm.c:14:5

--> ./tests/snapshots/arch-specific/asm.c:10:1
