c2dascript-transpile/tests/snapshots/snapshots__transpile@atomics.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/atomics.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(228) }, [CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(228) }], false, false, true); declaration=c11_atomics; cause=C11 atomics not supported in daScript

--> ./tests/snapshots/atomics.c:3:1
