c2dascript-transpile/tests/snapshots/snapshots__transpile@bitfields.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/bitfields.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(44) }, [], false, false, true); declaration=test_bitfields; cause=unsupported external call: printf
--> ./tests/snapshots/bitfields.c:15:5

--> ./tests/snapshots/bitfields.c:11:1
