c2dascript-transpile/tests/snapshots/snapshots__transpile@call_only_once.c.linux.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/os-specific/call_only_once.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(31) }, [], false, false, true); declaration=assert_call_only_once; cause=statement expression has no final value
--> ./tests/snapshots/os-specific/call_only_once.c:12:5

--> ./tests/snapshots/os-specific/call_only_once.c:11:1
