c2dascript-transpile/tests/snapshots/snapshots__transpile@exprs.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/exprs.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(31) }, [], false, false, false); declaration=side_effect; cause=unsupported external call: puts
--> ./tests/snapshots/exprs.c:4:5

--> ./tests/snapshots/exprs.c:3:1
