c2dascript-transpile/tests/snapshots/snapshots__transpile@f128.c.linux.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/os-specific/f128.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(44) }, [], false, false, true); declaration=long_double_test; cause=C extended-precision floating type has no daScript representation

--> ./tests/snapshots/os-specific/f128.c:4:1
